@@ -227,6 +227,7 @@ Bug fixes:
   * Issue #71:  bogus "no side effects" warning
   * fixed unreported bug where js2-next-error still stopped at suppressed warnings 
   * highlight 'each' keyword in =for each (foo in bar)= loops
+  * fixed "no side effects" warning in ||/&&-expressions where a child has side effects
 
 Behavior changes:
 
